@@ -6177,3 +6177,11 @@ PACKAGE: 2.2.99.2
  * Added $current_lang to available data in eprint script.
  * Moved exec'ing of SystemSetting binaries into Platform so that they
     can use custom code on non-UNIX platforms.
+
+2007-01-09 tmb
+ * Used TeX::Encode to provide some handling of accented characters in
+    BibTeX import.
+
+2007-01-11 tmb
+ * Added first cut of metadata fields, phrases and citations for new 
+    eprint types.
